Fixes for borders, in particular uncollapsed borders with a fixed column

--- a/demo/css/myTheme.css
+++ b/demo/css/myTheme.css
@@ -72,6 +72,7 @@
 
 .fancyTable {
 	/* text */
+	border-collapse: collapse;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	}
 
